[workspace]
members = [
    "assets",
    "common",
    "packer"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AMP Contributors"]
license = "Apache-2.0"
homepage = "https://github.com/amp-buildpacks/packer"
repository = "https://github.com/amp-buildpacks/packer"

[workspace.dependencies]
packer = { path = "packer" }
packer-common = { path = "common" }
packer-assets = { path = "assets" }

color-eyre = "0.6"
eyre = "0.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = "0.3"

[workspace.dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks", "run-for-all"]
