# Copyright (c) The Amphitheatre Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
    "assets",
    "common",
    "packer"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AMP Contributors"]
license = "Apache-2.0"
homepage = "https://github.com/amp-buildpacks/packer"
repository = "https://github.com/amp-buildpacks/packer"

[workspace.dependencies]
packer = { path = "packer" }
packer-common = { path = "common" }
packer-assets = { path = "assets" }

color-eyre = "0.6"
eyre = "0.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

tera = "1"

tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = "0.3"
