# Copyright (c) The Amphitheatre Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "packer-assets"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packer-common.workspace = true

eyre.workspace = true
serde_json.workspace = true
serde.workspace = true

tracing-subscriber = { workspace = true, features = ["registry", "env-filter", "fmt"] }
tracing.workspace = true

dunce = "1"
thiserror = "1"
walkdir = "2"
figment = { version = "0.10", features = ["toml", "env"] }
toml = { version = "0.8", features = ["preserve_order"] }
toml_edit = "0.21"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks", "run-for-all"]
